# platform

./: .devcontainer.json  .dockerignore  .envrc  .gitignore  .gitmodules  .infisical.json  Dockerfile  Makefile  README.md  devenv.export.nix  devenv.nix  devenv.yaml  justfile  publiccode.yml  pyproject.toml  requirements.in  requirements.txt  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: dependabot.yml
.github/workflows/: main.yaml
docs/: nodered-projects.md
integrations/bast/: draft.ipynb  schema.sql
integrations/dwd/: draft.ipynb  draft.sql  schema_warnmeldungen.sql  warnmeldungen.ipynb
integrations/lubw/: backfill.ipynb  jobs.py  look-at-delta-table.ipynb  maintain-delta-table.ipynb  push-hourly-to-public-s3.ipynb
integrations/marktstammregister/: erweiterteoeffentlicheeinheitstromerzeugung.ipynb  schema_erweiterteoeffentlicheeinheitstromerzeugung.sql
integrations/mastr/: jobs.py
integrations/sgc-weather/: explore-tti-api-and-deltalake.ipynb  jobs.py  sync-raw-tti-messages.ipynb
integrations/sinks/: quantumleap.py
integrations/sinks/udsp/: auth.py  quantumleap.py
integrations/sources/bast/: draft.ipynb  schema.sql  variablen.csv
integrations/sources/dagster_ipynb_test/: dagster.py  dagster_asset.py  notebook.ipynb
integrations/sources/dwd/: annual-schema.sql  draft.ipynb  draft.sql  hourly-schema.sql  jobs.py  lib.ipynb  lib.py  schema_warnmeldungen.sql  warnmeldungen.ipynb
integrations/sources/ecocounter/: README.md
integrations/sources/internal-reporting/: README.md
integrations/sources/lubw/: README.md  backfill.ipynb  backfill_asset.py  draft.ipynb  incremental_sync_job.py  jobs.py  lib.py  look-at-delta-table.ipynb  maintain-delta-table.ipynb  monthly_asset.py  monthly_upload.ipynb  push-hourly-to-public-s3.ipynb  sync-latest.ipynb
integrations/sources/marktstammregister/: draft.ipynb  erweiterteoeffentlicheeinheitstromerzeugung.ipynb  schema_erweiterteoeffentlicheeinheitstromerzeugung.sql
integrations/sources/schlagfallen_ebk/: schema.sql  (+1 more)
secrets/: secrets.yaml  sops.sh
secrets/recipients/: WBaumgartner@github-codespaces  patrik@l13y  patrik@x13
services/postgrest/: demo.py  docker-compose.yml  setup.sql
services/quantumleap/: docker-compose.yml
sgc_dagster/: assets.py  definitions.py  lubw.py  quantumleap.py  secrets.py
svc/noql/: Caddyfile  docker-compose.yml
test/: test_lubw_access.py  test_secrets.py  test_udp_access.py
utils/: secrets.py  version.sh
utils/dagster/: Dockerfile  code-location.sh  definitions.py  registry.py  resources.py
utils/jobs/: __init__.py
utils/udsp/: quantumleap-mgmt-helpers.sql  quantumleap.py
(+28 files in other folders)
