[project]
name = "sgc-platform"
version = "0.0.1"
authors = [
  { name="Patrik Keller", email="patrik.keller@konstanz.de" }
]
description = ""
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "dagster>=1.9.11",
    "dagster-webserver>=1.9.11",
    "httpx>=0.28.1",
    "notebook>=7.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "ruff>=0.9.4",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [ "integrations.*", "utils.*" ]

[tool.dagster]
module_name = "utils.dagster.definitions"
code_location_name = "sgc-platform"
