[project]
name = "sgc-platform"
version = "0.0.1"
authors = [
  { name="Patrik Keller", email="patrik.keller@konstanz.de" }
]
description = ""
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "apache-airflow==3.0.6",
    "dagster",
    "dagster-webserver",
    "deltalake",
    "duckdb",
    "httpx",
    "matplotlib",
    "notebook",
    "openpyxl",
    "pandas",
    "papermill",
    "pyarrow",
    "ruff",
    "s3fs",
    "sqlparse",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [ "integrations.*", "utils.*" ]

[tool.dagster]
module_name = "utils.dagster.definitions"
code_location_name = "sgc-platform"
